--- a/main.css
+++ b/main.css
@@ -5,87 +5,32 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif;
   }
 
-#tittle {
-  font-size: 500%;
-  text-align: center;
-  margin-top: 20%;
+body {
+    background-color: black;
 }
 
 /* NAVBAR */
 
-.navbar {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
-  overflow: hidden;
-  margin: 10px;
-  border-bottom: 2px solid white;
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  width: 20%;
+  background-color: rgb(37, 37, 37);
+  height: 100%;
+  position: fixed;
+  overflow: auto;
 }
 
-.navbar a {
-  float: left;
-  font-size: 14px;
-  color: black;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  border-bottom: 2px solid white;
-  font-family: TimesNewRoman,Times New Roman,Times,Baskerville,Georgia,serif;
-}
-
-@media screen and (max-width: 600px) {
-.navbar a {
-    float: none;
-    width: 100%;
-}
-}
-
-.dropdown {
-  float: left;
-  overflow: hidden;
-}
-
-.dropdown .dropbtn {
-  font-size: 18px;
-  border: none;
-  outline: none;
-  color: white;
-  padding: 14px 16px;
-  background-color: inherit;
-  font-family: inherit; /* Important for vertical align on mobile phones */
-  margin: 0; /* Important for vertical align on mobile phones */
-}
-
-.navbar a:hover, .dropdown:hover .dropbtn {
-  background-color: black;
-  border-bottom: 2px solid white;
-  color: white;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: white;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-.dropdown-content a {
-  float: none;
-  color: white;
-  padding: 12px 16px;
-  text-decoration: none;
+li a {
   display: block;
-  text-align: left;
-}
-
-.dropdown-content a:hover {
-  background-color: white;
   color: white;
+  padding: 8px 16px;
+  text-decoration: none;
 }
 
-.dropdown:hover .dropdown-content {
-  display: block;
+/* Change the link color on hover */
+li a:hover {
+  background-color: #555;
+  color: white;
 }
