--- a/main.css
+++ b/main.css
@@ -3,22 +3,21 @@
     padding: 0;
     margin: 0;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 15px;
   }
 
 body {
     background-color: black;
     color: white;
+    margin: 0;
 }
 
 .content {
-  display: block;
+  margin-left: 20%;
+  padding: 10%;
 }
 
 /* NAVBAR */
-
-.navbar {
-  display: block;
-}
 
 ul {
   list-style-type: none;
@@ -44,3 +43,6 @@ li a:hover {
   color: white;
 }
 
+.content p {
+  margin: 5% 0;
+}
